--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </ol>
     </div>
     <div>
-      <img src="https://content.codecademy.com/courses/freelance-1/unit-6/triangle.png" alt="Triangle Decoration">
+      <img src="./images/triangle.webp" alt="Triangle Decoration">
     </div>
   </nav>
 
